Fixed row spacing

--- a/public/style/_style.scss
+++ b/public/style/_style.scss
@@ -9,6 +9,15 @@ h1 {
   margin-bottom: 0;
 }
 
+@media all and (max-width: 600px) {
+  .title, h1 {
+    margin-top: 0;
+  }
+  .btn-large {
+    margin-bottom: 0;
+  }
+}
+
 @media all and (max-width: 960px) {
   h1{
     font-size: 40pt;
@@ -17,6 +26,7 @@ h1 {
 
 .title {
   margin-top: 4vh;
+  margin-bottom: -20px;
 }
 
 a:hover {
@@ -33,5 +43,5 @@ a:hover {
 }
 
 .row {
-  margin-bottom: 0;
+//  margin-bottom: 0;
 }
