--- a/public/style/main.css
+++ b/public/style/main.css
@@ -458,11 +458,18 @@ h1 {
   font-size: 5vw;
   margin-bottom: 0; }
 
+@media all and (max-width: 600px) {
+  .title, h1 {
+    margin-top: 0; }
+
+  .btn-large {
+    margin-bottom: 0; } }
 @media all and (max-width: 960px) {
   h1 {
     font-size: 40pt; } }
 .title {
-  margin-top: 4vh; }
+  margin-top: 4vh;
+  margin-bottom: -20px; }
 
 a:hover {
   text-decoration: none; }
@@ -473,8 +480,5 @@ a:hover {
 
 .message {
   height: 50px; }
-
-.row {
-  margin-bottom: 0; }
 
 /*# sourceMappingURL=main.css.map */
